--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,22 @@
 {
     "presets": [
-        "env",
-        "react"
+      "env",
+      "react"
     ],
     "plugins": [
-        "transform-class-properties",
-        "transform-object-rest-spread"
-    ]
-}
+      "transform-class-properties",
+      "transform-object-rest-spread"
+    ],
+    "env": {
+      "test": {
+        "presets": [
+          "env",
+          "react"
+          ],
+        "plugins": [
+          "transform-class-properties",
+          "transform-object-rest-spread"
+        ]
+      }
+    }
+  }
