--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "yarn": "^1.3.2"
   },
   "devDependencies": {
-    "enzyme": "3.0.0",
+    "babel-jest": "^22.1.0",
+    "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "3.0.1",
     "jest": "^22.1.4",
