--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-object-rest-spread": "6.23.0",
     "babel-plugin-transform-replace-object-assign": "^0.2.1",
+    "babel-polyfill": "6.26.0",
     "babel-preset-airbnb": "^2.4.0",
     "babel-preset-env": "1.5.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "build": "^0.1.4",
-    "cross-env": "5.0.5",
     "css-loader": "0.28.4",
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
@@ -33,13 +33,13 @@
     "moment": "2.18.1",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
-    "numeral": "2.0.6",
     "nvm": "0.0.4",
     "raf": "3.3.2",
     "react": "16.0.0",
     "react-addons-shallow-compare": "15.6.0",
     "react-dates": "12.7.0",
     "react-dom": "16.0.0",
+    "react-intl": "^2.4.0",
     "react-modal": "2.2.2",
     "react-redux": "5.0.5",
     "react-router-dom": "4.2.2",
@@ -50,11 +50,11 @@
     "style-loader": "0.18.2",
     "uuid": "3.1.0",
     "validator": "8.0.0",
-    "webpack": "3.1.0",
-    "yarn": "^1.3.2"
+    "webpack": "3.1.0"
   },
   "devDependencies": {
     "babel-jest": "^22.1.0",
+    "cross-env": "5.0.5",
     "dotenv": "4.0.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "1.0.0",
